<resources>
    <string name="app_name">SYMplified Merchant</string>
    <string name="hint_email">Email or Username</string>
    <string name="hint_password">Password</string>
    <string name="login_text">Login</string>
    <string name="tv_date">Date: \u0020</string>
    <string name="tv_date_value">Day, Month, Year</string>
    <string name="tv_invoice_number">Invoice:\u0020</string>
    <string name="tv_invoice_number_value">XXXXXXXXXXXXXX</string>
    <string name="btn_process">Process</string>
    <string name="tv_shipment_address">Shipment Address: \u0020</string>
    <string name="tv_shipment_address_value"> 24, Jalan 1/2, Taman Puchong Prima</string>
    <string name="tv_shipment_city">City: \u0020</string>
    <string name="tv_shipment_city_value">Puchong</string>
    <string name="tv_shipment_state">State: \u0020</string>
    <string name="tv_shipment_state_value">Selangor</string>
    <string name="tv_shipment_postcode">Postcode: \u0020</string>
    <string name="tv_shipment_postcode_value">47150</string>
    <string name="tv_shipment_name">Customer Name: \u0020</string>
    <string name="tv_shipment_name_value">Albert</string>
    <string name="tv_shipment_note">Customer Note: \u0020</string>
    <string name="tv_shipment_note_value">Please Ring the bell</string>
    <string name="header_item">Item</string>
    <string name="header_special_instruction">Special Instructions</string>
    <string name="header_variant">Variation</string>
    <string name="header_qty">Qty</string>
    <string name="header_price">Price</string>
    <string name="sub_total">Sub-Total</string>
    <string name="sub_total_value">57.00</string>
    <string name="discount">Discount</string>
    <string name="discount_value">0.00</string>
    <string name="service_charges">Service Charges</string>
    <string name="service_charges_value">5.70</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="delivery_charges_value">67.70</string>
    <string name="delivery_charges_discount">Delivery Charges Discount</string>
    <string name="delivery_charges_discount_value">7.70</string>
    <string name="btn_print">Print</string>
    <string name="is_pickup">Pickup \u0020</string>
    <string name="title_activity_orders">Orders</string>
    <string name="new_orders">New</string>
    <string name="processed_orders">Processed</string>
    <string name="pickup_orders">PickUp</string>
    <string name="sent_orders">Sent</string>

    <string name="card_name">Name:\u0020</string>
    <string name="card_name_value">Albert ul Muzrabani alhamed</string>
    <string name="card_phone">Phone:\u0020</string>
    <string name="card_phone_value">03451234567</string>
    <string name="order_quantity">Quantity</string>
    <string name="order_quantity_value">3</string>
    <string name="order_amount">Amount</string>
    <string name="order_amount_value">RM 22.00</string>
    <string name="ready_for_pickup">Process</string>
    <string name="symplified">Symplified</string>
    <string name="choose_a_store">Choose a Store</string>
    <string name="no_store_msg">No Stores Added Yet !</string>
    <string name="total">Total</string>
    <string name="set_store_status">Set Store Status</string>
    <string name="normal">Normal</string>
    <string name="paused">Paused Until</string>
    <string name="_30_min">30 min</string>
    <string name="_15_min">15 min</string>
    <string name="_45_min">45 min</string>
    <string name="_1_hour">1 hour</string>
    <string name="_24_hours">1 day</string>
    <string name="confirm">Confirm</string>
    <string name="setting_title">Store Settings</string>
    <string name="store_status">Store Status</string>
    <string name="click_here"><u>Click Here</u></string>

    <string-array name="categoryFnB">
        <item> /topics/McD </item>
    </string-array>

    <string-array name="categoryEcommerece">
        <item> /topics/awan-tech </item>
    </string-array>
</resources>