<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/order_item"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/item_row_non_expanded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/header_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/header_item"
            android:textColor="@color/sf_b_700"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent=".3" />

        <TextView
            android:id="@+id/header_variant"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/header_item"
            android:textColor="@color/sf_b_700"
            android:textSize="15dp"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/header_item"
            app:layout_constraintTop_toTopOf="@+id/header_item"
            app:layout_constraintWidth_percent=".245" />

        <TextView
            android:id="@+id/header_qty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/header_item"
            android:text="@string/header_qty"
            android:textAlignment="center"
            android:textColor="@color/sf_b_700"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/header_variant"
            app:layout_constraintTop_toTopOf="@+id/header_item"
            app:layout_constraintWidth_percent=".23" />

        <TextView
            android:id="@+id/header_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/header_item"
            android:text="@string/header_price"
            android:textAlignment="center"
            android:textColor="@color/sf_b_700"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/header_qty"
            app:layout_constraintTop_toTopOf="@+id/header_item"
            app:layout_constraintWidth_percent=".23" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/exanded_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_row_non_expanded">

        <TextView
            android:id="@+id/header_instruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:text="@string/header_special_instruction"
            android:textColor="@color/sf_b_700"
            android:textSize="15dp"
            android:textAlignment="center"
            android:textStyle="bold"
             />

        <TextView
            android:id="@+id/header_instruction_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:textColor="@color/sf_b_700"
            android:textAlignment="center"
            android:layout_toEndOf="@id/header_instruction" />


    </RelativeLayout>

    </RelativeLayout>